Added a ContentProvider for storing and retrieving favorite movies in a local sqlite database Added a transient member isFavorite to Movie Added a favorite UI element to the movie detail fragment Fixed many code inspection issues

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activity.main_activity.MainActivity"/>
         </activity>
+
+        <provider
+            android:name=".data.local.database.MovieProvider"
+            android:authorities="@string/content_authority"
+            android:exported="false"/>
     </application>
 
 </manifest>
